--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -34,11 +34,14 @@ jobs:
 
       - name: Check for known vulnerabilities
         run: |
+          # Run npm audit and check exit code
+          # Exit code 0 = no vulnerabilities found (good)
+          # Exit code 1 = vulnerabilities found (bad)
           if npm audit --audit-level=high; then
-            echo "High severity vulnerabilities found!"
-            exit 1
+            echo "✅ No high severity vulnerabilities found"
           else
-            echo "No high severity vulnerabilities found"
+            echo "❌ High severity vulnerabilities found!"
+            exit 1
           fi
 
       - name: Upload security report
