--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -34,18 +34,12 @@ jobs:
 
       - name: Check for known vulnerabilities
         run: |
-          # Run npm audit and check exit code
-          # Exit code 0 = no vulnerabilities found (good)
-          # Exit code 1 = vulnerabilities found (bad)
           if npm audit --audit-level=high; then
-            echo "✅ No high severity vulnerabilities found"
-          else
-            echo "❌ High severity vulnerabilities found!"
+            echo "High severity vulnerabilities found!"
             exit 1
+          else
+            echo "No high severity vulnerabilities found"
           fi
-
-      - name: Generate audit report
-        run: npm audit --json > audit-report.json || echo "{}" > audit-report.json
 
       - name: Upload security report
         uses: actions/upload-artifact@v4
@@ -53,5 +47,5 @@ jobs:
         with:
           name: security-audit-report
           path: |
-            audit-report.json
-            npm-debug.log* 
+            npm-debug.log*
+            audit-report.json 
