--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "security:audit": "npm audit",
-    "security:fix": "npm audit fix",
-    "security:check": "npm audit --audit-level=high",
-    "test": "echo \"No tests specified\" && exit 0"
+    "lint": "next lint"
   },
   "dependencies": {
     "firebase": "^12.0.0",
