--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -9,6 +9,12 @@ on:
     # Run security scan weekly
     - cron: '0 2 * * 1'
 
+# Explicit permissions for PR commenting
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   security-scan:
     runs-on: ubuntu-latest
@@ -20,7 +26,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
     - name: Install dependencies
