fix: Update CI workflow to use correct Node versions
- Use Node 20 for Next.js app
- Use Node 22 for Firebase functions (matching functions/package.json)
- Separate Node setup steps for different environments
- Improve build reliability

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,18 @@ jobs:
     - name: Build Next.js app
       run: npm run build
       
-    - name: Build Firebase functions
-      run: cd functions && npm ci && npm run build
-      working-directory: ./
-      
     - name: Run type check
       run: npm run lint
+      
+    - name: Setup Node.js for Firebase functions
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22'
+        cache: 'npm'
+        
+    - name: Build Firebase functions
+      run: |
+        cd functions
+        npm ci
+        npm run build
+      working-directory: ./
