fix: Simplify CI workflow to avoid Node version conflicts
- Use single Node 20 version for all builds
- Separate Firebase functions dependency installation
- Remove Node version switching that could cause conflicts
- Make CI more reliable and consistent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,15 +29,14 @@ jobs:
     - name: Run type check
       run: npm run lint
       
-    - name: Setup Node.js for Firebase functions
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-        cache: 'npm'
-        
-    - name: Build Firebase functions
+    - name: Install Firebase functions dependencies
       run: |
         cd functions
         npm ci
+      working-directory: ./
+      
+    - name: Build Firebase functions
+      run: |
+        cd functions
         npm run build
       working-directory: ./
