fix: Add error handling to Tailwind config for CI compatibility
- Add try-catch around design tokens import
- Provide fallback configuration if tokens can't be loaded
- Ensure build works in CI environment
- Add better error handling to prevent build failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
       run: npm ci
       
     - name: Build Next.js app
-      run: npm run build
+      run: |
+        npm run build
+        echo "Next.js build completed successfully"
+      continue-on-error: false
       
     - name: Run type check
       run: npm run lint
