chore: configure IDE to exclude functions directory from TypeScript checking
- Add VS Code settings to exclude functions/**/* from TypeScript validation
- Update .gitignore to exclude functions build artifacts
- Prevents IDE TypeScript errors for Firebase Functions code

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ next-env.d.ts
 
 # Firebase Functions environment file
 functions/.env
+
+# Firebase Functions build artifacts
+functions/node_modules
+functions/lib
+functions_temp
