--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
   "typescript.preferences.includePackageJsonAutoImports": "auto",
   "typescript.preferences.includeSourceFiles": false,
-  "typescript.exclude": [
-    "functions/**/*",
-    "functions_temp/**/*"
-  ],
   "files.exclude": {
     "functions/node_modules": true,
     "functions/lib": true,
@@ -20,5 +16,7 @@
     "test-results": true
   },
   "typescript.validate.enable": true,
-  "typescript.check.npmIsInstalled": false
+  "typescript.check.npmIsInstalled": false,
+  "typescript.preferences.includeInlayParameterNameHints": "none",
+  "typescript.preferences.includeInlayFunctionParameterTypeHints": false
 }
